Skill page3 completed

--- a/portfollio/src/components/utility/utility.css
+++ b/portfollio/src/components/utility/utility.css
@@ -27,3 +27,11 @@
 .pg3-heading::before{
 content:  'Skills';
 }
+
+.heading2{
+    font-size: 2rem;
+    font-weight: 600;
+}
+.heading2-desc{
+    font-size: 1.2rem;
+}
