--- a/portfollio/src/components/pages/Page3.css
+++ b/portfollio/src/components/pages/Page3.css
@@ -4,10 +4,38 @@
     width: clamp(850px, 75%, 1200px);
 }
 
-.heading2{
-    font-size: 2rem;
-    font-weight: 600;
+/* heading2 and heading2-desc CSS are wrtten on Utility.css----- */
+
+.skill-edu-container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border: 0px solid red;
+    margin-top: clamp(20px,3% , 40px);
 }
-.heading2-desc{
-    font-size: 1.2rem;
+.edu-container{
+    border: 0px solid gray;
+    display: flex;
+    flex-direction: column;
+    width:30%;
+    min-width: 280px;
+}
+.skillcontainer{
+    border: 0px solid gray;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0px 15px;
+}
+.edu-card1{
+    width:100%;
+    min-width: 280px;
+    margin: clamp(10px , 3% , 18px) 0px ;
+}
+.skill-card2{
+    min-width: 250px;
+    width: 49% ;
+    margin: clamp(8px , 1% , 10px) 0px ;
 }
