--- a/portfollio/src/components/pages/Page2.css
+++ b/portfollio/src/components/pages/Page2.css
@@ -1,7 +1,7 @@
 .page-2{
     border: 0px solid gray;
-    margin: 1.5% auto;
-    width: clamp(850px, 75%, 1200px);
+    /* margin: 1.5% auto;
+    width: clamp(850px, 75%, 1200px); */
 }
 .abt-me-container{
     display: flex;
@@ -10,7 +10,7 @@
 }
 
 .abt-me-photo{
-    width: 50%;
+    width: 50%; 
     min-width: 250px;
 }
 .abt-me-photo img{
@@ -99,3 +99,25 @@
     animation: animate-from-right 2s ease-out;
 }
  
+
+
+
+
+
+
+
+
+
+@media (max-width: 700px) {
+    .abt-me-container{
+        flex-wrap: wrap;
+    }
+    .abt-me-photo{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .abt-me-desc{
+        width: 100%;
+    }
+  }
+  
