--- a/portfollio/src/components/pages/Page5.css
+++ b/portfollio/src/components/pages/Page5.css
@@ -1,15 +1,16 @@
 .page5{
     border: 0px solid gray;
-    margin: 1.5% auto;
-    width: clamp(850px, 75%, 1200px);
+    /* margin: 1.5% auto;
+    width: clamp(850px, 75%, 1200px); */
 }
 .project-container{
     display:flex ;
     width: 100%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 .project-container>div{
     margin: 30px 12px;
 }
+ 
