--- a/portfollio/src/components/pages/Page8.css
+++ b/portfollio/src/components/pages/Page8.css
@@ -1,7 +1,7 @@
 .page8{
     border: 0px solid gray;
-    margin: 1.5% auto;
-    width: clamp(850px, 75%, 1200px);
+    /* margin: 1.5% auto;
+    width: clamp(850px, 75%, 1200px); */
 }
 
 .pg8-container{
@@ -9,7 +9,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     border: 0px solid red;
-}
+} 
 .pg8-left{
     border: 0px solid red;
     display: flex;
@@ -49,7 +49,7 @@
 
 .form-table table {
     width: 100%; /* Set the width of the table */
-    border-collapse: collapse; /* Optional for border handling */
+    border: 0px solid red;
 }
 
 .pg8-right td {
@@ -83,3 +83,21 @@
 .send-msg:hover{
    background-color: var(--hover-color);
 }
+
+
+
+@media (max-width: 700px) {
+    .pg8-right-l1{
+        font-size: 1.4rem;
+        margin-top: 20px;
+    }
+    .contact-link1>div{
+        font-size: 1.2rem;
+        margin-right: 20px;
+    }
+    .pg8-right{
+        width: 100%;
+    }
+    .send-msg{
+    }
+  }
