--- a/portfollio/src/components/unique_component/Footerpan.css
+++ b/portfollio/src/components/unique_component/Footerpan.css
@@ -1,25 +1,21 @@
-.big-footer{
-    width: 100%;
-    background-color: var(--second-color);
-}
+
 .footer{
     border: 0px solid gray;
     margin: 1.5% auto;
-    width: clamp(850px, 75%, 1200px);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: clamp(20px , 3% , 25px) ;
 }
 .footer-left , .footer-mid , .footer-right{
-    display: flex;
+    display: flex; 
     flex-direction: column;
     color: white;
 }
 .footer-left-l1{
     font-size: 2.3rem;
     font-weight: 500;
-    text-shadow: 2px 2px 6px rgb(187, 211, 255);
+    text-shadow: 2px 2px 4px rgb(93, 0, 156);
 }
 .footer-left-l2{
     font-size: 1.3rem;
@@ -65,3 +61,31 @@
     font-size: 1.2rem;
     padding-bottom: 15px;
 }
+
+
+
+
+
+
+
+
+
+@media (max-width: 700px) {
+    .footer , .footer-left, .footer-right , .footer-mid{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-mid-l1{
+        display: none;
+    }
+    .footer-mid-l2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 0px solid red;
+        flex-direction: column;
+        width: 300px;
+        margin-bottom: 20px;
+    }
+  }
