Animation add for scroll

--- a/portfollio/src/components/pages/Page1.css
+++ b/portfollio/src/components/pages/Page1.css
@@ -109,7 +109,7 @@
     }
 }
 
-.social-media{
+/* .social-media{
     animation: animate-from-left 1s ease-out;
 }
 .profile-heading{
@@ -123,7 +123,7 @@
     
 }
 
-
+ */
 
 
 
