--- a/portfollio/src/components/pages/Page2.css
+++ b/portfollio/src/components/pages/Page2.css
@@ -89,7 +89,7 @@
     }
 }
 
-.pg-2-heading{
+/* .pg-2-heading{
     animation: animate-from-left 2s ease-out;
 }
 .abt-me-photo{
@@ -98,12 +98,11 @@
 .abt-me-desc{
     animation: animate-from-right 2s ease-out;
 }
+  */
+
+
+
  
-
-
-
-
-
 
 
 
