--- a/portfollio/src/components/unique_component/Footerpan.css
+++ b/portfollio/src/components/unique_component/Footerpan.css
@@ -11,6 +11,7 @@
     display: flex; 
     flex-direction: column;
     color: white;
+    padding:10px 0px;
 }
 .footer-left-l1{
     font-size: 2.3rem;
@@ -88,4 +89,9 @@
         width: 300px;
         margin-bottom: 20px;
     }
-  }
+    .footer-left , .footer-mid , .footer-right{
+        border-bottom: 1px solid rgb(173, 209, 239);
+        
+    }
+    
+}
