routes are connected and maintainence page added

--- a/portfollio/src/components/utility/utility.css
+++ b/portfollio/src/components/utility/utility.css
@@ -39,6 +39,9 @@ content:  'Skills';
 .pg8-heading::before{
     content: 'Contact Me';
 }
+.gallery-heading::before{
+    content: 'Gallery';
+}
 
 .heading2{
     font-size: 2rem;
